fix product height on small size

--- a/assets/css/product.scss
+++ b/assets/css/product.scss
@@ -297,7 +297,7 @@ body {
                         display: -ms-flexbox;
                         display: flex;
                         outline: none;
-                        max-height: 51vh;
+                        // max-height: 51vh;
                         img {
                             max-width: 100%;
                             max-height: 100%;
